# stereo_dense_reconstruction

./: .gitignore  CMakeLists.txt  README.md  package.xml  run_stereo_offline.sh
calibration/: 15_07_2020_isec_indoor.yml  car_cam0_1.yml  car_cam2_3.yml  indoor_cam2_3.yml  original_test.yml
cfg/: CamToRobotCalibParams.cfg  offline.sh  sampleruncmd.txt
include/: DepthReconstructor.h  depth_uncalibrated.h  utils.h
src/: DepthReconstructor.cpp  dense_reconstruction.cpp  depth_uncalibrated.cpp  stereo_app.cpp  stereo_offline_bag.cpp  utils.cpp
