<?xml version="1.0"?>
<package format="2">
  
  <name>stereo_reconstruction</name>
  <version>1.0.0</version>
  <description>The stereo_reconstruction package</description>
  
  <maintainer email="kaveti.p@northeastern.edu">Pushyami Kaveti</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend> 
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>  
  <build_depend>sensor_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>


  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
